examples/errors/fn_anonymous.vut
let callback = fn () {
  out("nope")
}
